8265150: AsyncGetCallTrace crashes on ResourceMark

Backport-of: 267c024eb52acd1611188dd5b1417b877ff3eafd