src/hotspot/share/prims/jvmtiEnvBase.cpp
@@ -814,7 +814,7 @@ JvmtiEnvBase::get_stack_trace(JavaThread *java_thread,
          "at safepoint or target thread is suspended");
   int count = 0;
   if (java_thread->has_last_Java_frame()) {
-    RegisterMap reg_map(java_thread);
+    RegisterMap reg_map(java_thread, false /* update_map */);
     Thread* current_thread = Thread::current();
     ResourceMark rm(current_thread);
     javaVFrame *jvf = java_thread->last_java_vframe(&reg_map);
